--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
+SQLAlchemy==2.0.21
 python-dotenv==1.0.1
 requests==2.32.3
+pymongo==4.5.0
